--- a/AMPS/res/layout/activity_profile_account.xml
+++ b/AMPS/res/layout/activity_profile_account.xml
@@ -2,112 +2,158 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:columnCount="3"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:columnCount="3"
     tools:context=".ProfileAccountActivity" >
-    
+
     <TextView
         android:id="@+id/textViewUsername"
-        android:layout_row="0"
         android:layout_column="0"
         android:layout_columnSpan="1"
         android:layout_gravity="left|top"
+        android:layout_row="0"
         android:text="@string/username"
         android:textAppearance="?android:attr/textAppearanceLarge" />
 
     <EditText
         android:id="@+id/editTextUsername"
-        android:layout_row="0"
         android:layout_column="1"
         android:layout_columnSpan="2"
         android:layout_gravity="fill_horizontal"
-        android:ems="10" >
-		<requestFocus />
-    </EditText>
-    
+        android:layout_row="0"
+        android:ems="10"
+        android:inputType="text" />
+
     <TextView
         android:id="@+id/textViewFullName"
-        android:layout_row="1"
         android:layout_column="0"
         android:layout_columnSpan="1"
         android:layout_gravity="left|top"
+        android:layout_row="1"
         android:text="@string/fullname"
         android:textAppearance="?android:attr/textAppearanceLarge" />
 
     <EditText
         android:id="@+id/editTextFullName"
-        android:layout_row="1"
         android:layout_column="1"
         android:layout_columnSpan="2"
         android:layout_gravity="fill_horizontal"
+        android:layout_row="1"
         android:ems="10"
-        android:inputType="textPersonName" >
-        <requestFocus />
-    </EditText>
-    
+        android:inputType="textPersonName" />
+
     <TextView
         android:id="@+id/textViewContactNo"
-        android:layout_row="2"
         android:layout_column="0"
         android:layout_columnSpan="1"
         android:layout_gravity="left|top"
+        android:layout_row="2"
         android:text="@string/contactno"
         android:textAppearance="?android:attr/textAppearanceLarge" />
 
     <EditText
         android:id="@+id/editTextContactNo"
-        android:layout_row="2"
         android:layout_column="1"
         android:layout_columnSpan="2"
         android:layout_gravity="fill_horizontal"
+        android:layout_row="2"
         android:ems="10"
-        android:inputType="phone" >
-        <requestFocus />
-     </EditText>
+        android:inputType="phone" />
+
 
     <TextView
         android:id="@+id/textViewEmail"
-        android:layout_row="3"
         android:layout_column="0"
         android:layout_columnSpan="1"
         android:layout_gravity="left|top"
+        android:layout_row="3"
         android:text="@string/email"
         android:textAppearance="?android:attr/textAppearanceLarge" />
 
     <EditText
         android:id="@+id/editTextEmail"
-        android:layout_row="3"
         android:layout_column="1"
         android:layout_columnSpan="2"
         android:layout_gravity="fill_horizontal"
+        android:layout_row="3"
         android:ems="10"
-        android:inputType="textEmailAddress" >
-        <requestFocus />
-     </EditText>
+        android:inputType="textEmailAddress" />
 
     <TextView
         android:id="@+id/textViewAddress"
-        android:layout_row="4"
         android:layout_column="0"
         android:layout_columnSpan="1"
         android:layout_gravity="left|top"
+        android:layout_row="4"
         android:text="@string/address"
         android:textAppearance="?android:attr/textAppearanceLarge" />
 
     <EditText
         android:id="@+id/editTextAddress"
-        android:layout_row="4"
         android:layout_column="1"
         android:layout_columnSpan="2"
         android:layout_gravity="fill_horizontal"
+        android:layout_row="4"
         android:ems="10"
-        android:inputType="textPostalAddress" >
+        android:inputType="textPostalAddress" />
+
+    <TextView
+        android:id="@+id/textViewPosition"
+        android:layout_column="0"
+        android:layout_columnSpan="1"
+        android:layout_gravity="left|top"
+        android:layout_row="5"
+        android:text="@string/position"
+        android:textAppearance="?android:attr/textAppearanceLarge" />
+
+    <EditText
+        android:id="@+id/editTextPosition"
+        android:layout_column="1"
+        android:layout_columnSpan="2"
+        android:layout_gravity="fill_horizontal"
+        android:layout_row="5"
+        android:ems="10"
+        android:inputType="text" />
+
+    <TextView
+        android:id="@+id/textViewBirthDate"
+        android:layout_column="0"
+        android:layout_columnSpan="1"
+        android:layout_gravity="left|top"
+        android:layout_row="6"
+        android:text="@string/birthdate"
+        android:textAppearance="?android:attr/textAppearanceLarge" />
+
+    <EditText
+        android:id="@+id/editTextBirthDate"
+        android:layout_column="1"
+        android:layout_columnSpan="2"
+        android:layout_gravity="fill_horizontal"
+        android:layout_row="6"
+        android:ems="10"
+        android:inputType="date" />
+
+    <Button
+        android:id="@+id/buttonUpdate"
+        android:layout_column="0"
+        android:layout_columnSpan="3"
+    android:layout_width="match_parent"
+        android:layout_row="7"
+        android:text="@string/update" >
+
         <requestFocus />
-     </EditText>
-    
-    
-    
+    </Button>
+
+    <Button
+        android:id="@+id/buttonCancel"
+        android:layout_column="0"
+        android:layout_columnSpan="3"
+    android:layout_width="match_parent"
+        android:layout_row="8"
+        android:text="@string/cancel" >
+    </Button>
+
 </GridLayout>
