--- a/AMPS/res/layout/activity_profile.xml
+++ b/AMPS/res/layout/activity_profile.xml
@@ -2,10 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:id="@+id/activity_profile"
     tools:context=".ProfileActivity" >
-
-    <com.example.amps.ProfileTabMenu
-    android:layout_width="fill_parent"
-    android:layout_height="wrap_content" />
 
 </RelativeLayout>
