Resolved connection. Passed values.

--- a/AMPS/res/layout/activity_login.xml
+++ b/AMPS/res/layout/activity_login.xml
@@ -29,7 +29,7 @@
         android:inputType="textPassword" />
 
     <Button
-        android:id="@+id/button_login"
+        android:id="@+id/buttonLogin"
         android:layout_column="0"
         android:layout_columnSpan="1"
         android:layout_gravity="fill_horizontal|center_vertical"
@@ -38,20 +38,11 @@
         android:text="@string/button_login" />
 
     <Button
-        android:id="@+id/button_cancel"
+        android:id="@+id/buttonCancel"
         android:layout_column="0"
         android:layout_columnSpan="1"
         android:layout_gravity="fill_horizontal|center_vertical"
         android:layout_row="3"
         android:text="@string/button_cancel" />
-
-
-    <TextView
-        android:id="@+id/txtUsername"
-        android:layout_column="0"
-        android:layout_columnSpan="1"
-        android:layout_gravity="center_horizontal|bottom"
-        android:layout_row="3"
-        android:textAppearance="?android:attr/textAppearanceLarge" />
 
     </GridLayout>
