--- a/AMPS/res/layout/activity_home.xml
+++ b/AMPS/res/layout/activity_home.xml
@@ -2,62 +2,79 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:columnCount="2"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:columnCount="1"
     tools:context=".HomeActivity" >
 
     <TextView
         android:id="@+id/textViewWelcome"
-        android:layout_row="0"
         android:layout_column="0"
-        android:layout_columnSpan="1"
+        android:layout_columnSpan="2"
         android:layout_gravity="center_horizontal|top"
+        android:layout_row="0"
         android:text="@string/welcome"
         android:textAppearance="?android:attr/textAppearanceLarge" />
+    
+    <Spinner
+        android:id="@+id/spinnerProjects"
+        android:layout_width="500dp"
+        android:layout_column="0"
+        android:layout_columnSpan="1"
+        android:layout_gravity="left|center_vertical"
+        android:layout_row="1" />
+    
+     <Button
+        android:id="@+id/buttonView"
+        android:layout_column="1"
+        android:layout_columnSpan="1"
+        android:layout_row="1"
+        android:layout_gravity="center_horizontal|center_vertical"
+        android:text="@string/view"
+        android:onClick="onClick"/>
 
     <TextView
         android:id="@+id/textViewNews"
-        android:layout_row="1"
         android:layout_column="0"
-        android:layout_columnSpan="1"
+        android:layout_columnSpan="2"
         android:layout_gravity="left|top"
+        android:layout_row="2"
         android:text="@string/news"
         android:textAppearance="?android:attr/textAppearanceLarge" />
 
     <GridLayout
-        android:layout_row="2"
-        android:layout_column="0"
-        android:layout_columnSpan="1"
-        android:layout_gravity="left|top"
         android:layout_width="match_parent"
-    	android:layout_height="match_parent"
-    	android:paddingTop="@dimen/activity_vertical_margin"
-    	android:columnCount="3">
+        android:layout_height="match_parent"
+        android:layout_column="0"
+        android:layout_columnSpan="2"
+        android:layout_gravity="left|top"
+        android:layout_row="3"
+        android:columnCount="3"
+        android:paddingTop="@dimen/activity_vertical_margin" >
 
         <ImageView
             android:id="@+id/imageView1"
             android:layout_column="0"
-            android:layout_row="0"
-        	android:layout_columnSpan="1"
+            android:layout_columnSpan="1"
             android:layout_gravity="left|top"
-    		android:paddingRight="@dimen/activity_horizontal_margin"
-            android:src="@drawable/newyear"
-            android:contentDescription="newyear"/>
+            android:layout_row="0"
+            android:contentDescription="newyear"
+            android:paddingRight="@dimen/activity_horizontal_margin"
+            android:src="@drawable/newyear" />
 
         <TextView
             android:id="@+id/textView1"
             android:layout_column="1"
-            android:layout_row="0"
-        	android:layout_columnSpan="2"
+            android:layout_columnSpan="2"
             android:layout_gravity="left|top"
+            android:layout_row="0"
             android:maxLines="4"
             android:text="@string/headline1"
             android:textAppearance="?android:attr/textAppearanceMedium" />
-
-
     </GridLayout>
+
+    
 
 </GridLayout>
