--- a/AMPS/res/layout/fragment_project_information.xml
+++ b/AMPS/res/layout/fragment_project_information.xml
@@ -136,7 +136,7 @@
         android:inputType="number" />
 
     <TextView
-        android:id="@+id/textViewActualStart"
+        android:id="@+id/textviewActualStart"
         android:layout_column="0"
         android:layout_columnSpan="1"
         android:layout_gravity="left|top"
