--- a/AMPS/res/layout/fragment_project_information.xml
+++ b/AMPS/res/layout/fragment_project_information.xml
@@ -17,7 +17,7 @@
         android:layout_row="0"
         android:text="@string/projectname"
         android:textAppearance="?android:attr/textAppearanceLarge" />
-
+    
     <EditText
         android:id="@+id/editTextProjectName"
         android:layout_column="1"
@@ -208,7 +208,7 @@
         android:inputType="textMultiLine" />
 
     <TextView
-        android:id="@+id/textViewCreatedby"
+        android:id="@+id/textViewCreatedBy"
         android:layout_column="0"
         android:layout_columnSpan="3"
         android:layout_gravity="left|top"
@@ -235,7 +235,7 @@
         android:textAppearance="?android:attr/textAppearanceLarge" />
 
     <TextView
-        android:id="@+id/textViewLastUpdatedOn"
+        android:id="@+id/textViewLastUpdatedDate"
         android:layout_column="0"
         android:layout_columnSpan="3"
         android:layout_gravity="left|top"
