--- a/AMPS/res/layout/fragment_profile_account.xml
+++ b/AMPS/res/layout/fragment_profile_account.xml
@@ -114,8 +114,7 @@
         android:layout_column="1"
         android:layout_columnSpan="2"
         android:layout_gravity="left|top"
-        android:layout_row="5"
-        android:entries="@array/titlevalue" />
+        android:layout_row="5" />
 
     <TextView
         android:id="@+id/textViewGender"
@@ -132,8 +131,7 @@
         android:layout_column="1"
         android:layout_columnSpan="2"
         android:layout_gravity="left|top"
-        android:layout_row="6"
-        android:entries="@array/gendervalue" />
+        android:layout_row="6" />
 
     <TextView
         android:id="@+id/textViewBirthDate"
