--- a/AMPS/res/layout/fragment_profile_account.xml
+++ b/AMPS/res/layout/fragment_profile_account.xml
@@ -176,7 +176,8 @@
         android:layout_columnSpan="3"
         android:layout_gravity="top"
         android:layout_row="9"
-        android:text="@string/update" >
+        android:text="@string/update"
+        android:onClick="onClick" >
 
         <requestFocus />
     </Button>
@@ -188,7 +189,7 @@
         android:layout_columnSpan="3"
         android:layout_gravity="top"
         android:layout_row="10"
-        android:text="@string/cancel" >
-    </Button>
+        android:text="@string/cancel"
+        android:onClick="onClick" />
 
 </GridLayout>
