--- a/AMPS/res/layout/fragment_profile_account.xml
+++ b/AMPS/res/layout/fragment_profile_account.xml
@@ -13,17 +13,16 @@
         android:id="@+id/textViewUsername"
         android:layout_column="0"
         android:layout_columnSpan="1"
-        android:layout_gravity="left|top"
-        android:layout_row="0"
-        android:text="@string/username"
-        android:textAppearance="?android:attr/textAppearanceLarge" />
+        android:layout_gravity="center_vertical|left"
+        android:layout_row="1"
+        android:text="@string/username" />
 
     <EditText
         android:id="@+id/editTextUsername"
         android:layout_column="1"
         android:layout_columnSpan="2"
         android:layout_gravity="fill_horizontal"
-        android:layout_row="0"
+        android:layout_row="1"
         android:ems="10"
         android:inputType="text" />
 
@@ -31,17 +30,16 @@
         android:id="@+id/textViewDisplayName"
         android:layout_column="0"
         android:layout_columnSpan="1"
-        android:layout_gravity="left|top"
-        android:layout_row="1"
-        android:text="@string/displayname"
-        android:textAppearance="?android:attr/textAppearanceLarge" />
+        android:layout_gravity="center_vertical|left"
+        android:layout_row="2"
+        android:text="@string/displayname" />
 
     <EditText
         android:id="@+id/editTextDisplayName"
         android:layout_column="1"
         android:layout_columnSpan="2"
         android:layout_gravity="fill_horizontal"
-        android:layout_row="1"
+        android:layout_row="2"
         android:ems="10"
         android:inputType="text" />
 
@@ -49,17 +47,16 @@
         android:id="@+id/textViewFirstName"
         android:layout_column="0"
         android:layout_columnSpan="1"
-        android:layout_gravity="left|top"
-        android:layout_row="2"
-        android:text="@string/firstname"
-        android:textAppearance="?android:attr/textAppearanceLarge" />
+        android:layout_gravity="center_vertical|left"
+        android:layout_row="3"
+        android:text="@string/firstname" />
 
     <EditText
         android:id="@+id/editTextFirstName"
         android:layout_column="1"
         android:layout_columnSpan="2"
         android:layout_gravity="fill_horizontal"
-        android:layout_row="2"
+        android:layout_row="3"
         android:ems="10"
         android:inputType="textPersonName" />
 
@@ -67,17 +64,16 @@
         android:id="@+id/textViewLastName"
         android:layout_column="0"
         android:layout_columnSpan="1"
-        android:layout_gravity="left|top"
-        android:layout_row="3"
-        android:text="@string/lastname"
-        android:textAppearance="?android:attr/textAppearanceLarge" />
+        android:layout_gravity="center_vertical|left"
+        android:layout_row="4"
+        android:text="@string/lastname" />
 
     <EditText
         android:id="@+id/editTextLastName"
         android:layout_column="1"
         android:layout_columnSpan="2"
         android:layout_gravity="fill_horizontal"
-        android:layout_row="3"
+        android:layout_row="4"
         android:ems="10"
         android:inputType="textPersonName" />
 
@@ -85,17 +81,16 @@
         android:id="@+id/textViewEmail"
         android:layout_column="0"
         android:layout_columnSpan="1"
-        android:layout_gravity="left|top"
-        android:layout_row="4"
-        android:text="@string/email"
-        android:textAppearance="?android:attr/textAppearanceLarge" />
+        android:layout_gravity="center_vertical|left"
+        android:layout_row="5"
+        android:text="@string/email" />
 
     <EditText
         android:id="@+id/editTextEmail"
         android:layout_column="1"
         android:layout_columnSpan="2"
         android:layout_gravity="fill_horizontal"
-        android:layout_row="4"
+        android:layout_row="5"
         android:ems="10"
         android:inputType="textEmailAddress" />
 
@@ -103,10 +98,9 @@
         android:id="@+id/textViewTitle"
         android:layout_column="0"
         android:layout_columnSpan="1"
-        android:layout_gravity="left|top"
-        android:layout_row="5"
-        android:text="@string/title"
-        android:textAppearance="?android:attr/textAppearanceLarge" />
+        android:layout_gravity="center_vertical|left"
+        android:layout_row="6"
+        android:text="@string/title" />
 
     <Spinner
         android:id="@+id/spinnerTitle"
@@ -114,16 +108,15 @@
         android:layout_column="1"
         android:layout_columnSpan="2"
         android:layout_gravity="left|top"
-        android:layout_row="5" />
+        android:layout_row="6" />
 
     <TextView
         android:id="@+id/textViewGender"
         android:layout_column="0"
         android:layout_columnSpan="1"
-        android:layout_gravity="left|top"
-        android:layout_row="6"
-        android:text="@string/gender"
-        android:textAppearance="?android:attr/textAppearanceLarge" />
+        android:layout_gravity="center_vertical|left"
+        android:layout_row="7"
+        android:text="@string/gender" />
 
     <Spinner
         android:id="@+id/spinnerGender"
@@ -131,23 +124,22 @@
         android:layout_column="1"
         android:layout_columnSpan="2"
         android:layout_gravity="left|top"
-        android:layout_row="6" />
+        android:layout_row="7" />
 
     <TextView
         android:id="@+id/textViewBirthDate"
         android:layout_column="0"
         android:layout_columnSpan="1"
-        android:layout_gravity="left|top"
-        android:layout_row="7"
-        android:text="@string/birthdate"
-        android:textAppearance="?android:attr/textAppearanceLarge" />
+        android:layout_gravity="center_vertical|left"
+        android:layout_row="8"
+        android:text="@string/birthdate" />
 
     <EditText
         android:id="@+id/editTextBirthDate"
         android:layout_column="1"
         android:layout_columnSpan="2"
         android:layout_gravity="fill_horizontal|left|top"
-        android:layout_row="7"
+        android:layout_row="8"
         android:ems="10"
         android:inputType="date" />
 
@@ -155,17 +147,16 @@
         android:id="@+id/textViewIC"
         android:layout_column="0"
         android:layout_columnSpan="1"
-        android:layout_gravity="left|top"
-        android:layout_row="8"
-        android:text="@string/ic"
-        android:textAppearance="?android:attr/textAppearanceLarge" />
+        android:layout_gravity="center_vertical|left"
+        android:layout_row="9"
+        android:text="@string/ic" />
 
     <EditText
         android:id="@+id/editTextIC"
         android:layout_column="1"
         android:layout_columnSpan="2"
         android:layout_gravity="fill_horizontal|left|top"
-        android:layout_row="8"
+        android:layout_row="9"
         android:ems="10"
         android:inputType="text" />
 
@@ -175,9 +166,9 @@
         android:layout_column="0"
         android:layout_columnSpan="3"
         android:layout_gravity="top"
-        android:layout_row="9"
-        android:text="@string/update"
-        android:onClick="onClick" >
+        android:layout_row="10"
+        android:onClick="onClick"
+        android:text="@string/update" >
 
         <requestFocus />
     </Button>
@@ -188,8 +179,8 @@
         android:layout_column="0"
         android:layout_columnSpan="3"
         android:layout_gravity="top"
-        android:layout_row="10"
-        android:text="@string/cancel"
-        android:onClick="onClick" />
+        android:layout_row="11"
+        android:onClick="onClick"
+        android:text="@string/cancel" />
 
 </GridLayout>
