--- a/AMPS/res/layout/fragment_profile_password.xml
+++ b/AMPS/res/layout/fragment_profile_password.xml
@@ -10,38 +10,19 @@
     tools:context=".ProfilePasswordFragment" >
 
     <TextView
-        android:id="@+id/textViewCurrentPassword"
-        android:layout_column="0"
-        android:layout_columnSpan="1"
-        android:layout_gravity="left|top"
-        android:layout_row="0"
-        android:text="@string/currentpassword"
-        android:textAppearance="?android:attr/textAppearanceLarge" />
-
-    <EditText
-        android:id="@+id/editTextCurrentPassword"
-        android:layout_column="1"
-        android:layout_columnSpan="2"
-        android:layout_gravity="fill_horizontal"
-        android:layout_row="0"
-        android:ems="10"
-        android:inputType="textPassword" />
-
-    <TextView
         android:id="@+id/textViewNewPassword"
         android:layout_column="0"
         android:layout_columnSpan="1"
         android:layout_gravity="left|top"
-        android:layout_row="1"
-        android:text="@string/newpassword"
-        android:textAppearance="?android:attr/textAppearanceLarge" />
+        android:layout_row="0"
+        android:text="@string/newpassword" />
 
     <EditText
         android:id="@+id/editTextNewPassword"
         android:layout_column="1"
         android:layout_columnSpan="2"
         android:layout_gravity="fill_horizontal"
-        android:layout_row="1"
+        android:layout_row="0"
         android:ems="10"
         android:inputType="textPassword" />
 
@@ -50,16 +31,15 @@
         android:layout_column="0"
         android:layout_columnSpan="1"
         android:layout_gravity="left|top"
-        android:layout_row="2"
-        android:text="@string/verifypassword"
-        android:textAppearance="?android:attr/textAppearanceLarge" />
+        android:layout_row="1"
+        android:text="@string/verifypassword" />
 
     <EditText
         android:id="@+id/editTextVerifyPassword"
         android:layout_column="1"
         android:layout_columnSpan="2"
         android:layout_gravity="fill_horizontal"
-        android:layout_row="2"
+        android:layout_row="1"
         android:ems="10"
         android:inputType="textPassword" />
 
@@ -67,8 +47,8 @@
         android:id="@+id/buttonUpdate"
         android:layout_column="0"
         android:layout_columnSpan="3"
-    android:layout_width="match_parent"
-        android:layout_row="3"
+    	android:layout_width="match_parent"
+        android:layout_row="2"
         android:text="@string/update" >
 
         <requestFocus />
@@ -79,7 +59,7 @@
         android:layout_column="0"
         android:layout_columnSpan="3"
     android:layout_width="match_parent"
-        android:layout_row="4"
+        android:layout_row="3"
         android:text="@string/cancel" />
 
 </GridLayout>
