--- a/AMPS/res/layout/fragment_profile_settings.xml
+++ b/AMPS/res/layout/fragment_profile_settings.xml
@@ -15,8 +15,7 @@
         android:layout_columnSpan="1"
         android:layout_gravity="left|top"
         android:layout_row="0"
-        android:text="@string/noofprojectstodisplay"
-        android:textAppearance="?android:attr/textAppearanceLarge" />
+        android:text="@string/noofprojectstodisplay" />
 
     <Spinner
         android:id="@+id/spinnerNoOfProjectsToDisplay"
@@ -33,8 +32,7 @@
         android:layout_columnSpan="1"
         android:layout_gravity="left|top"
         android:layout_row="1"
-        android:text="@string/noofassetstodisplay"
-        android:textAppearance="?android:attr/textAppearanceLarge" />
+        android:text="@string/noofassetstodisplay" />
 
     <Spinner
         android:id="@+id/spinnerNoOfAssetsToDisplay"
@@ -51,8 +49,7 @@
         android:layout_columnSpan="2"
         android:layout_gravity="left|top"
         android:layout_row="2"
-        android:text="@string/autopreviewassets"
-        android:textAppearance="?android:attr/textAppearanceLarge" />
+        android:text="@string/autopreviewassets" />
 
     <CheckBox
         android:id="@+id/checkBoxRequireChangePassword"
@@ -60,8 +57,7 @@
         android:layout_columnSpan="2"
         android:layout_gravity="left|top"
         android:layout_row="3"
-        android:text="@string/requirechangepassword"
-        android:textAppearance="?android:attr/textAppearanceLarge" />
+        android:text="@string/requirechangepassword" />
 
     <Button
         android:id="@+id/buttonUpdate"
