--- a/AMPS/res/layout/fragment_project_bulletins.xml
+++ b/AMPS/res/layout/fragment_project_bulletins.xml
@@ -15,7 +15,6 @@
         android:layout_columnSpan="1"
         android:layout_gravity="left|center_vertical"
         android:layout_row="0"
-        android:text="Bulletins Placeholder"
-        android:textAppearance="?android:attr/textAppearanceLarge" />
+        android:text="Bulletins Placeholder" />
 
 </GridLayout>
