--- a/AMPS/res/layout/fragment_project_information.xml
+++ b/AMPS/res/layout/fragment_project_information.xml
@@ -13,11 +13,10 @@
         android:id="@+id/textViewProjectName"
         android:layout_column="0"
         android:layout_columnSpan="1"
-        android:layout_gravity="left|center_vertical"
+        android:layout_gravity="center_vertical|left"
         android:layout_row="0"
-        android:text="@string/projectname"
-        android:textAppearance="?android:attr/textAppearanceLarge" />
-    
+        android:text="@string/projectname" />
+
     <EditText
         android:id="@+id/editTextProjectName"
         android:layout_column="1"
@@ -31,10 +30,9 @@
         android:id="@+id/textViewProjectType"
         android:layout_column="0"
         android:layout_columnSpan="1"
-        android:layout_gravity="left|top"
+        android:layout_gravity="center_vertical|left"
         android:layout_row="1"
-        android:text="@string/projecttype"
-        android:textAppearance="?android:attr/textAppearanceLarge" />
+        android:text="@string/projecttype" />
 
     <Spinner
         android:id="@+id/spinnerProjectType"
@@ -49,10 +47,9 @@
         android:id="@+id/textViewProjectStatus"
         android:layout_column="0"
         android:layout_columnSpan="1"
-        android:layout_gravity="left|top"
+        android:layout_gravity="center_vertical|left"
         android:layout_row="2"
-        android:text="@string/projectstatus"
-        android:textAppearance="?android:attr/textAppearanceLarge" />
+        android:text="@string/projectstatus" />
 
     <Spinner
         android:id="@+id/spinnerProjectStatus"
@@ -67,10 +64,9 @@
         android:id="@+id/textViewClient"
         android:layout_column="0"
         android:layout_columnSpan="1"
-        android:layout_gravity="left|top"
+        android:layout_gravity="center_vertical|left"
         android:layout_row="3"
-        android:text="@string/client"
-        android:textAppearance="?android:attr/textAppearanceLarge" />
+        android:text="@string/client" />
 
     <Spinner
         android:id="@+id/spinnerClient"
@@ -85,10 +81,9 @@
         android:id="@+id/textViewEstimatedStart"
         android:layout_column="0"
         android:layout_columnSpan="1"
-        android:layout_gravity="left|top"
+        android:layout_gravity="center_vertical|left"
         android:layout_row="4"
-        android:text="@string/estimatedstart"
-        android:textAppearance="?android:attr/textAppearanceLarge" />
+        android:text="@string/estimatedstart" />
 
     <EditText
         android:id="@+id/editTextEstimatedStart"
@@ -103,10 +98,9 @@
         android:id="@+id/textViewEstimatedEnd"
         android:layout_column="0"
         android:layout_columnSpan="1"
-        android:layout_gravity="left|top"
+        android:layout_gravity="center_vertical|left"
         android:layout_row="5"
-        android:text="@string/estimatedend"
-        android:textAppearance="?android:attr/textAppearanceLarge" />
+        android:text="@string/estimatedend" />
 
     <EditText
         android:id="@+id/editTextEstimatedEnd"
@@ -121,10 +115,9 @@
         android:id="@+id/textViewEstimatedDuration"
         android:layout_column="0"
         android:layout_columnSpan="1"
-        android:layout_gravity="left|top"
+        android:layout_gravity="center_vertical|left"
         android:layout_row="6"
-        android:text="@string/estimatedduration"
-        android:textAppearance="?android:attr/textAppearanceLarge" />
+        android:text="@string/estimatedduration" />
 
     <EditText
         android:id="@+id/editTextEstimatedDuration"
@@ -139,10 +132,9 @@
         android:id="@+id/textviewActualStart"
         android:layout_column="0"
         android:layout_columnSpan="1"
-        android:layout_gravity="left|top"
+        android:layout_gravity="center_vertical|left"
         android:layout_row="7"
-        android:text="@string/actualstart"
-        android:textAppearance="?android:attr/textAppearanceLarge" />
+        android:text="@string/actualstart" />
 
     <EditText
         android:id="@+id/editTextActualStart"
@@ -157,10 +149,9 @@
         android:id="@+id/textViewActualEnd"
         android:layout_column="0"
         android:layout_columnSpan="1"
-        android:layout_gravity="left|top"
+        android:layout_gravity="center_vertical|left"
         android:layout_row="8"
-        android:text="@string/actualend"
-        android:textAppearance="?android:attr/textAppearanceLarge" />
+        android:text="@string/actualend" />
 
     <EditText
         android:id="@+id/editTextActualEnd"
@@ -175,10 +166,9 @@
         android:id="@+id/textViewActualDuration"
         android:layout_column="0"
         android:layout_columnSpan="1"
-        android:layout_gravity="left|top"
+        android:layout_gravity="center_vertical|left"
         android:layout_row="9"
-        android:text="@string/actualduration"
-        android:textAppearance="?android:attr/textAppearanceLarge" />
+        android:text="@string/actualduration" />
 
     <EditText
         android:id="@+id/editTextActualDuration"
@@ -193,10 +183,9 @@
         android:id="@+id/textViewDescription"
         android:layout_column="0"
         android:layout_columnSpan="1"
-        android:layout_gravity="left|top"
+        android:layout_gravity="center_vertical|left"
         android:layout_row="10"
-        android:text="@string/description"
-        android:textAppearance="?android:attr/textAppearanceLarge" />
+        android:text="@string/description" />
 
     <EditText
         android:id="@+id/editTextDescription"
@@ -211,37 +200,33 @@
         android:id="@+id/textViewCreatedBy"
         android:layout_column="0"
         android:layout_columnSpan="3"
-        android:layout_gravity="left|top"
+        android:layout_gravity="center_vertical|left"
         android:layout_row="11"
-        android:text="@string/createdby"
-        android:textAppearance="?android:attr/textAppearanceLarge" />
+        android:text="@string/createdby" />
 
     <TextView
         android:id="@+id/textViewCreationDate"
         android:layout_column="0"
         android:layout_columnSpan="3"
-        android:layout_gravity="left|top"
+        android:layout_gravity="center_vertical|left"
         android:layout_row="12"
-        android:text="@string/creationdate"
-        android:textAppearance="?android:attr/textAppearanceLarge" />
+        android:text="@string/creationdate" />
 
     <TextView
         android:id="@+id/textViewLastUpdatedBy"
         android:layout_column="0"
         android:layout_columnSpan="3"
-        android:layout_gravity="left|top"
+        android:layout_gravity="center_vertical|left"
         android:layout_row="13"
-        android:text="@string/lastupdatedby"
-        android:textAppearance="?android:attr/textAppearanceLarge" />
+        android:text="@string/lastupdatedby" />
 
     <TextView
         android:id="@+id/textViewLastUpdatedDate"
         android:layout_column="0"
         android:layout_columnSpan="3"
-        android:layout_gravity="left|top"
+        android:layout_gravity="center_vertical|left"
         android:layout_row="14"
-        android:text="@string/lastupdatedon"
-        android:textAppearance="?android:attr/textAppearanceLarge" />
+        android:text="@string/lastupdatedon" />
 
     <Button
         android:id="@+id/buttonUpdate"
