--- a/AMPS/res/layout/fragment_report.xml
+++ b/AMPS/res/layout/fragment_report.xml
@@ -15,7 +15,6 @@
         android:layout_columnSpan="1"
         android:layout_gravity="left|center_vertical"
         android:layout_row="0"
-        android:text="Report Placeholder"
-        android:textAppearance="?android:attr/textAppearanceLarge" />
+        android:text="Report Placeholder" />
 
 </GridLayout>
