--- a/AMPS/res/layout/activity_login.xml
+++ b/AMPS/res/layout/activity_login.xml
@@ -1,48 +1,57 @@
-<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:columnCount="1"
+    android:layout_height="wrap_content"
+    android:layout_gravity="center_vertical"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
+    android:shrinkColumns="*"
+    android:stretchColumns="*"
     tools:context=".LoginActivity" >
 
-    <EditText
-        android:id="@+id/username"
-        android:layout_column="0"
-        android:layout_columnSpan="1"
-        android:layout_gravity="fill_horizontal|center_vertical"
-        android:layout_row="0"
-        android:ems="10"
-        android:hint="@string/user_name" />
+    <TableRow>
 
-    <EditText
-        android:id="@+id/password"
-        android:layout_column="0"
-        android:layout_columnSpan="1"
-        android:layout_gravity="fill_horizontal|center_vertical"
-        android:layout_row="1"
-        android:ems="10"
-        android:hint="@string/password"
-        android:inputType="textPassword" />
+        <TextView
+            android:id="@+id/textViewAMPS"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:text="@string/app_name" />
 
-    <Button
-        android:id="@+id/buttonLogin"
-        android:layout_column="0"
-        android:layout_columnSpan="1"
-        android:layout_gravity="fill_horizontal|center_vertical"
-        android:layout_row="2"
-        android:onClick="onClick"
-        android:text="@string/button_login" />
+    </TableRow>
 
-    <Button
-        android:id="@+id/buttonCancel"
-        android:layout_column="0"
-        android:layout_columnSpan="1"
-        android:layout_gravity="fill_horizontal|center_vertical"
-        android:layout_row="3"
-        android:text="@string/button_cancel" />
+    <TableRow>
 
-    </GridLayout>
+        <EditText
+            android:id="@+id/editTextUsername"
+            android:ems="10"
+            android:hint="@string/username" />
+    </TableRow>
+
+    <TableRow>
+
+        <EditText
+            android:id="@+id/editTextPassword"
+            android:ems="10"
+            android:hint="@string/password"
+            android:inputType="textPassword" />
+    </TableRow>
+
+    <TableRow>
+
+        <Button
+            android:id="@+id/buttonLogin"
+            android:onClick="onClick"
+            android:text="@string/button_login" />
+    </TableRow>
+
+    <TableRow>
+
+        <Button
+            android:id="@+id/buttonCancel"
+            android:text="@string/button_cancel" />
+    </TableRow>
+
+</TableLayout>
